fix(tag): stopping screenreader text from bleeding out in some cases

--- a/packages/genesys-spark/src/style/_mixins.scss
+++ b/packages/genesys-spark/src/style/_mixins.scss
@@ -28,8 +28,8 @@
 @mixin gux-sr-only-clip {
   &:not(:focus):not(:active) {
     position: absolute;
-    width: 1px;
-    height: 1px;
+    width: 0;
+    height: 0;
     overflow: hidden;
     white-space: nowrap;
     clip: rect(0 0 0 0);
